# media-catalog-movies

./: .env.example  .gitignore  .tmp_workflow_payload.json  CHANGELOG.md  Makefile  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
assets/: dicts.json
data/: plantilla_importamatic_otros.csv
scripts/: db_maintenance.py  migrate_db.py  snapshots.py
src/: project_meta.py
src/backend/: clients.py  config.py  database.py  main.py  multi_value.py  normalizers.py  omdb_dictionaries.py
src/backend/repositories/: items_repo.py
src/backend/routers/: export.py  items.py  snapshots.py
src/backend/schemas/: imdb.py  ingest.py  items.py  omdb.py  review.py  translation.py  workflow.py
src/backend/services/: catalog.py  cover_extraction.py  export.py  imdb_links.py  imdb_title_es.py  migrations.py  movies.py  omdb_data.py  plot_translation.py  snapshots.py  tc_sections.py  workflow.py
src/backend/workflow/: __init__.py  graph.py
src/frontend/: app.py  tc_sections.py  utils.py
src/frontend/pages/: 00_Orquestación.py  00_orquestacion.py  02_Título.py  (+13 more)
src/media_catalog_movies.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_api.py  test_migrations.py  test_project_meta.py  test_tc_sections.py
tools/: README.md  launch-app.bat  launch-app.desktop  launch-app.sh  run-make-target.bat  run-make-target.sh  set-up-app.bat  set-up-app.desktop  set-up-app.sh  stop-app.bat  stop-app.desktop  stop-app.sh  update-and-launch-app.bat  update-and-launch-app.desktop  update-and-launch-app.sh  update-app.bat  update-app.desktop  update-app.sh
