[project]
name = "media-catalog-movies"
version = "0.2.0"
requires-python = ">=3.12"

dependencies = [
  "fastapi",
  "uvicorn",
  "streamlit",
  "duckdb",
  "requests",
  "beautifulsoup4",
  "cinemagoer",
  "pillow",
  "pillow-heif",
  "ollama",
  "googlesearch-python",
  "langgraph"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "httpx",
  "black",
  "ruff"
]

[tool.black]
target-version = ["py312"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
